--- a/package.json
+++ b/package.json
@@ -2,13 +2,24 @@
   "name": "electron",
   "version": "0.1.0",
   "private": true,
+  "main": "main/main.ts",
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently -k \"npm run next:dev\" \"npm run electron:dev\"",
+    "next:dev": "next dev",
+    "electron:dev": "wait-on http://localhost:3000 && electron -r tsx main/main.ts",
     "build": "next build",
+    "electron:build": "electron-builder",
+    "postinstall": "electron-builder install-app-deps",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@journeyapps/wa-sqlite": "^1.5.0",
+    "@powersync/react": "^1.8.3",
+    "@powersync/web": "^1.34.0",
+    "@supabase/supabase-js": "^2.97.0",
+    "framer-motion": "^12.34.3",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
@@ -18,9 +29,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.2.1",
+    "electron": "^40.6.0",
+    "electron-builder": "^26.8.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "tsx": "^4.21.0",
+    "typescript": "^5",
+    "wait-on": "^9.0.4"
   }
 }
